# modorganizer-preview_nif

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  nexus.bbcode.txt  plugindefinition.json  vcpkg.json
.github/: release.yml
.github/workflows/: build.yml
cmake/: apply_fetchcontent_patch.cmake  package_preview_nif.cmake  run_clang_tidy.cmake
cmake/patches/: gli-clang-tidy-swizzle-translate.patch  gli-clang-tidy-texture-cache.patch  gli-clang22-enum-bitmask.patch  nifly-unionbv-complete-type.patch
data/shaders/: collision_wire.frag  collision_wire.vert  default.vert  fo4_effectshader.frag  sk_default.frag  sk_effectshader.frag  sk_pbr.frag  sk_refraction_proxy.frag
mo2-abi/: README.md
mo2-abi/2.5.3beta11/include/uibase/: iplugingame.h  questionboxmemory.h
src/: ArchiveAccess.cpp  ArchiveAccess.h  CMakeLists.txt  Camera.cpp  Camera.h  CameraSynchronizer.cpp  CameraSynchronizer.h  CollisionGeometry.cpp  CollisionGeometry.h  DdsTextures.cpp  DdsTextures.h  Fo4Material.cpp  Fo4Material.h  MoDataPaths.cpp  MoDataPaths.h  NifExtensions.h  NifPreviewPane.cpp  NifPreviewPane.h  NifPreviewSource.cpp  NifPreviewSource.h  NifPreviewWidget.cpp  NifPreviewWidget.h  NifShaderFlags.h  NifShaderUtils.h  NifTransforms.h  NifWidget.cpp  NifWidget.h  OpenGLCollisionOverlay.cpp  OpenGLCollisionOverlay.h  OpenGLResources.cpp  OpenGLResources.h  OpenGLShape.cpp  OpenGLShape.h  OpenGLShapeDrawState.cpp  OpenGLShapeDrawState.h  OpenGLShapeGeometry.cpp  OpenGLShapeGeometry.h  OpenGLShapeMaterial.cpp  OpenGLShapeMaterial.h  OpenGLShapeTextures.cpp  (+29 more)
